# Geometry

./: .clang-format  CMakeLists.txt  circle.h  ishape.h  line.h  main.cpp  point.h  polygon.h  ray.h  segment.h  vector.h
src/: circle.cpp  line.cpp  point.cpp  polygon.cpp  ray.cpp  segment.cpp  vector.cpp
